# utils

./: Tests.ipynb  apiUtils.py  bashrc  fileUtils.py  fsUtils.py  geoUtils.py  geohashUtils.py  ioUtils.py  listUtils.py  mathUtils.py  modelUtils.py  numpyUtils.py  pandasUtils.py  pyUtils.py  pyproject.toml  searchUtils.py  setup.py  sparkUtils.py  strUtils.py  timeUtils.py  tsUtils.py  tsneUtils.py  uidUtils.py  webUtils.py
rc/: zshrc
scripts/: killjup.sh
src/utils/: __init__.py  download.py  fsinfo.py  fstime.py  htmlutil.py  io.py  lang.py  listutil.py  mem.py  strnorm.py  strutil.py  timestat.py  timeterm.py  webapi.py  webdata.py  webutil.py
tests/: Tests.ipynb  pyproject.toml  test_fsinfo.py  test_import.py  test_lists.py  test_recentfiles.py  test_timestat.py
tests/fileutils/: __init__.py  info.py  time.py
tests/rc/: zshrc
tests/src/utils/: io.py  langutil.py  timeconv.py  timeutil.py  webdata.py
