[tool.poetry]
name = "utils"
version = "0.1.0"
description = "General utilities for my code"
authors = ["tgadf <tgadfort@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.1.0"
bs4 = "^0.0.1"
tqdm = "^4.66.1"
langdetect = "^1.0.9"
regex = "^2023.8.8"
joblib = "^1.3.2"
h5py = "^3.9.0"
pyspark = "^3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
